--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Kid</title>
-  <base href="/Deploy-Project/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
@@ -14,6 +14,6 @@
 
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.07ba447c51fcd1a568ac.js" type="module"></script><script src="runtime-es5.07ba447c51fcd1a568ac.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="main-es2015.3a64892b2d6b4438b6a0.js" type="module"></script><script src="main-es5.3a64892b2d6b4438b6a0.js" nomodule defer></script></body>
+<script src="runtime-es2015.07ba447c51fcd1a568ac.js" type="module"></script><script src="runtime-es5.07ba447c51fcd1a568ac.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="main-es2015.e8238ee1227b66acff2b.js" type="module"></script><script src="main-es5.e8238ee1227b66acff2b.js" nomodule defer></script></body>
 
 </html>
