--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
-<link rel="stylesheet" href="styles.e8e3a8fbad13c0fdeff1.css"></head>
+</head>
 </head>
 
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.c6be26cc06214cfb1503.js" type="module"></script><script src="runtime-es5.c6be26cc06214cfb1503.js" nomodule defer></script><script src="polyfills-es5.9e286f6d9247438cbb02.js" nomodule defer></script><script src="polyfills-es2015.690002c25ea8557bb4b0.js" type="module"></script><script src="main-es2015.54177b561dc371d06f96.js" type="module"></script><script src="main-es5.54177b561dc371d06f96.js" nomodule defer></script></body>
+<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
 
 </html>
