--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Kid</title>
   <base href="/Deploy-Project/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon"  href="assets/logo/logo.ico">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
 <link rel="stylesheet" href="styles.4a1f6b981336c649d029.css"></head>
@@ -14,6 +14,6 @@
 
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.00868790e8ad85774905.js" type="module"></script><script src="runtime-es5.00868790e8ad85774905.js" nomodule defer></script><script src="polyfills-es5.736f2d9faec4ce67a92c.js" nomodule defer></script><script src="polyfills-es2015.ae2ff135b6a0a9cb55e7.js" type="module"></script><script src="main-es2015.e00f556a3004decf37fa.js" type="module"></script><script src="main-es5.e00f556a3004decf37fa.js" nomodule defer></script></body>
+<script src="runtime-es2015.f624f1314e09d298af21.js" type="module"></script><script src="runtime-es5.f624f1314e09d298af21.js" nomodule defer></script><script src="polyfills-es5.736f2d9faec4ce67a92c.js" nomodule defer></script><script src="polyfills-es2015.ae2ff135b6a0a9cb55e7.js" type="module"></script><script src="main-es2015.f27685fcfe3d448f1ef5.js" type="module"></script><script src="main-es5.f27685fcfe3d448f1ef5.js" nomodule defer></script></body>
 
 </html>
