--- a/index.html
+++ b/index.html
@@ -4,16 +4,19 @@
 <head>
   <meta charset="utf-8">
   <title>Kid</title>
-  <base href="/Deploy-Project/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon"  href="assets/logo/logo.ico">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
-<link rel="stylesheet" href="styles.4a1f6b981336c649d029.css"></head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+<link rel="stylesheet" href="styles.2aae29838b44fcc745b6.css"></head>
 </head>
 
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.f624f1314e09d298af21.js" type="module"></script><script src="runtime-es5.f624f1314e09d298af21.js" nomodule defer></script><script src="polyfills-es5.736f2d9faec4ce67a92c.js" nomodule defer></script><script src="polyfills-es2015.ae2ff135b6a0a9cb55e7.js" type="module"></script><script src="main-es2015.f27685fcfe3d448f1ef5.js" type="module"></script><script src="main-es5.f27685fcfe3d448f1ef5.js" nomodule defer></script></body>
+<script src="runtime-es2015.ee2c5804259bb046ec1f.js" type="module"></script><script src="runtime-es5.ee2c5804259bb046ec1f.js" nomodule defer></script><script src="polyfills-es5.736f2d9faec4ce67a92c.js" nomodule defer></script><script src="polyfills-es2015.ae2ff135b6a0a9cb55e7.js" type="module"></script><script src="main-es2015.4ad55060ed4036b43600.js" type="module"></script><script src="main-es5.4ad55060ed4036b43600.js" nomodule defer></script></body>
 
 </html>
