--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8">
   <title>Kid</title>
-  <base href="/">
+  <base href="/Deploy-Project/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon"  href="assets/logo/logo.ico">
+  <link rel="icon" href="assets/logo/logo.ico">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
