--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
   <title>Kid</title>
   <base href="/Deploy-Project/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" href="assets/logo/logo.ico">
+  <link rel="icon"  href="assets/logo/logo.ico">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="styles.7929bb8bd731d4506610.css"></head>
+</head>
 </head>
 
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.0d302bd0adcf8103a8a0.js" type="module"></script><script src="runtime-es5.0d302bd0adcf8103a8a0.js" nomodule defer></script><script src="polyfills-es5.736f2d9faec4ce67a92c.js" nomodule defer></script><script src="polyfills-es2015.ae2ff135b6a0a9cb55e7.js" type="module"></script><script src="main-es2015.bd6433a8101fe24cccfc.js" type="module"></script><script src="main-es5.bd6433a8101fe24cccfc.js" nomodule defer></script></body>
+<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
 
 </html>
