--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Kid</title>
-  <base href="/Deploy-Project/">
+  <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon"  href="assets/logo/logo.ico">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
@@ -12,11 +12,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="styles.8a71660670bea885efb0.css"></head>
+</head>
 </head>
 
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.cc18d84015a28043d0f5.js" type="module"></script><script src="runtime-es5.cc18d84015a28043d0f5.js" nomodule defer></script><script src="polyfills-es5.736f2d9faec4ce67a92c.js" nomodule defer></script><script src="polyfills-es2015.ae2ff135b6a0a9cb55e7.js" type="module"></script><script src="main-es2015.ee2702904dcd85de6b74.js" type="module"></script><script src="main-es5.ee2702904dcd85de6b74.js" nomodule defer></script></body>
+<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
 
 </html>
