--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Kid</title>
   <base href="/Deploy-Project/">
+  <!-- <base href="/"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon"  href="assets/logo/logo.ico">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
@@ -12,11 +13,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="styles.3f10c123e2516b663781.css"></head>
+<link rel="stylesheet" href="styles.4a51bbcc0b1d1b57c61c.css"></head>
 </head>
 
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.fa012218bbb97d20b488.js" type="module"></script><script src="runtime-es5.fa012218bbb97d20b488.js" nomodule defer></script><script src="polyfills-es5.736f2d9faec4ce67a92c.js" nomodule defer></script><script src="polyfills-es2015.ae2ff135b6a0a9cb55e7.js" type="module"></script><script src="main-es2015.293e10347ae19f4aa4db.js" type="module"></script><script src="main-es5.293e10347ae19f4aa4db.js" nomodule defer></script></body>
+<script src="runtime-es2015.fd4ddb36de8ae28b42ee.js" type="module"></script><script src="runtime-es5.fd4ddb36de8ae28b42ee.js" nomodule defer></script><script src="polyfills-es5.736f2d9faec4ce67a92c.js" nomodule defer></script><script src="polyfills-es2015.ae2ff135b6a0a9cb55e7.js" type="module"></script><script src="main-es2015.9011dec86de49225852e.js" type="module"></script><script src="main-es5.9011dec86de49225852e.js" nomodule defer></script></body>
 
 </html>
