--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="styles.4a51bbcc0b1d1b57c61c.css"></head>
+</head>
 </head>
 
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.fd4ddb36de8ae28b42ee.js" type="module"></script><script src="runtime-es5.fd4ddb36de8ae28b42ee.js" nomodule defer></script><script src="polyfills-es5.736f2d9faec4ce67a92c.js" nomodule defer></script><script src="polyfills-es2015.ae2ff135b6a0a9cb55e7.js" type="module"></script><script src="main-es2015.9011dec86de49225852e.js" type="module"></script><script src="main-es5.9011dec86de49225852e.js" nomodule defer></script></body>
+<script src="runtime-es2015.js" type="module"></script><script src="runtime-es5.js" nomodule defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills-es2015.js" type="module"></script><script src="styles-es2015.js" type="module"></script><script src="styles-es5.js" nomodule defer></script><script src="vendor-es2015.js" type="module"></script><script src="vendor-es5.js" nomodule defer></script><script src="main-es2015.js" type="module"></script><script src="main-es5.js" nomodule defer></script></body>
 
 </html>
